# esp32-modbusTCP2RTU-gateway-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash.gdb  mbGateway.c  mbGateway.h  sdkconfig
components/mbgw/: CMakeLists.txt  esp_log.c  mbGateway.c  mbGateway.h  my_select.c  sig.c
main/: CMakeLists.txt  Neetd2fix.txt  mDNSServer.cpp  mDNSServer.h  main.cpp  mbGateway.c  mbGateway.h
